--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     tools:context="com.wxc.mediaplayer.activity.MainActivity">
 
+    <include layout="@layout/titlebar" />
+
     <FrameLayout
         android:id="@+id/fl_main_content"
         android:layout_width="match_parent"
